# evals

./: .rules  Cargo.toml  README.md  anthropic-evaluation-report.json
examples/: README.md  cases.json  compare-models.sh  mcp-servers.json  run-anthropic.sh  run-openai.sh  system-prompt.txt
src/: conversation_model.rs  evaluation.rs  judge.rs  main.rs  mcp_manager.rs  model_config.rs  tested_model.rs  ui.rs
src/conversation_model/: anthropic.rs  openai.rs
