[package]
name = "evals"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
async-trait = "0.1"
indicatif = "0.17"
owo-colors = "4.0"
chrono = { version = "0.4", features = ["serde"] }
